improve email template and image

--- a/dev/tasks/notification/email/docker/email_template.html
+++ b/dev/tasks/notification/email/docker/email_template.html
@@ -23,6 +23,15 @@
             border-radius: 5px;
         }
 
+        .warning-header {
+            background-color: #FCF8E3 !important;
+            color: #8A6D3B;
+            padding: 20px;
+            font-size: 18px;
+            text-align: left;
+            border: 2px solid #FAEED1;
+            border-radius: 5px;          
+        }
 
         .failed-header {
             background-color: #F2DEDE !important;
@@ -34,6 +43,15 @@
             border-radius: 5px;
         }   
 
+        .info-header {
+            background-color: #D9EDF7 !important;
+            color: #5188A3;
+            padding: 20px;
+            font-size: 18px;
+            text-align: left;
+            border: 2px solid #BCE8F1;
+            border-radius: 5px;            
+        }   
 
         .details-table{
             width:50%; 
@@ -55,8 +73,8 @@
 
     <table class="details-table">
         <tr>
-            <td class="successful-header"> 
-                <strong>Success!</strong>
+            <td class="{HEADER_CLASS}"> 
+                <strong>{HEADER_MSG}</strong>
             </td>
         </tr>        
         <tr>
@@ -69,7 +87,7 @@
                 <p><strong>Pipelinerun:</strong> {PIPELINERUN_NAME}</p>
                 <p><strong>Namespace:</strong> {NAMESPACE}</p>
                 <p><strong>Status:</strong> {PIPELINERUN_STATUS}</p>
-                <p><strong>When:</strong> {DAT}</p>
+                <p><strong>When:</strong> {CUR_DAT}</p>
             </td>
          </tr>
     </table>
